--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "export": "next export"
   },
   "dependencies": {
+    "@awesome-cordova-plugins/core": "^5.41.0",
+    "@capacitor-community/barcode-scanner": "^2.1.1",
     "@capacitor/android": "^3.0.1",
     "@capacitor/cli": "^3.0.1",
     "@capacitor/core": "^3.0.1",
     "@capacitor/ios": "^3.0.1",
     "@capacitor/status-bar": "^1.0.1",
+    "@ionic-native/qr-scanner": "^4.20.0",
     "@ionic/react": "^5.5.2",
     "@ionic/react-router": "^5.5.2",
     "autoprefixer": "^10.2.6",
